syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/laiker/chat-server/pkg/chat_v1;chat_v1";

service chatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc GetUserChats(GetUserChatsRequest) returns (GetUserChatsResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc Connect(ConnectRequest) returns (stream Message);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc CreateAnonymousUser(CreateAnonymousUserRequest) returns (CreateAnonymousUserResponse);
}

message CreateAnonymousUserRequest {
  string login = 1;
}

message CreateAnonymousUserResponse {
  int64 user_id = 1;
  string login = 2;
}

message CreateRequest {
  repeated int64 ids = 1;
  int64 id = 2;
  string name = 3;
  bool is_public = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateResponse {
  int64 id = 1;
}

message GetUserChatsRequest {
  int64 id = 1;
}

message GetUserChatsResponse {
  repeated Chat chats = 1;
}


message DeleteRequest {
  int64 id = 1;
}

message ConnectRequest {
  int64 chat_id = 1;
  int64 user_id = 2;
  string login = 3;
}

message Chat {
  int64 id = 1;
  string name = 2;
  bool is_public = 3;
  google.protobuf.Timestamp created_at = 4;
}

message Message {
  int64 user_id = 1;
  string user_login = 2;
  string text = 3;
  google.protobuf.Timestamp created_at = 4;
}

message SendMessageRequest {
  int64 chat_id = 1;
  Message message = 2;
}
